@@ -1,3 +1,8 @@
+2017-06-02  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/util.c (gprintf):  Do not use LaTeX formatting in tabular output.
+	Bug #1931
+
 2017-05-30  (Debian /debian-science/packages/gnuplot.git/)
 
 	* term/post.trm:  Do not emit Author field containing current username.
